# vrlgraph

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
crates/vrlgraph/: Cargo.toml
crates/vrlgraph-egui/: Cargo.toml  README.md
crates/vrlgraph-egui/shaders/: egui.frag.glsl  egui.vert.glsl
crates/vrlgraph-egui/src/: lib.rs
crates/vrlgraph/derive/src/: shader.rs
crates/vrlgraph/examples/buffers/: main.rs
crates/vrlgraph/examples/buffers/shaders/: mesh.vert.glsl
crates/vrlgraph/src/: shader.rs  types.rs  vertex.rs
crates/vrlgraph/src/graph/: command.rs  dag.rs  image.rs  sampler.rs  transient.rs
crates/vrlgraph/src/resource/: handle.rs  mod.rs  shader.rs  streaming.rs
derive/: Cargo.toml
derive/src/: lib.rs  shader.rs
examples/bda/: main.rs
examples/bda/shaders/: bda_fill.comp.glsl  fill.comp.glsl
examples/buffers/: main.rs
examples/buffers/shaders/: mesh.vert.glsl
examples/common/: mod.rs
examples/compute/: main.rs
examples/compute/shaders/: blit.frag.glsl  fill.comp.glsl  fullscreen.vert.glsl
examples/triangle/: main.rs
examples/triangle/shaders/: triangle.vert.glsl
src/: lib.rs  shader.rs  types.rs  vertex.rs
src/device/: instance.rs  mod.rs  swapchain.rs
src/graph/: access.rs  barrier.rs  bindless.rs  builder.rs  command.rs  dag.rs  descriptor.rs  frame.rs  image.rs  mod.rs  pass.rs  pipeline.rs  pipelines.rs  query.rs  reload.rs  resources.rs  sync.rs  transient.rs
src/resource/: buffer.rs  handle.rs  image.rs  mod.rs  pipeline.rs  pool.rs
vrlgraph/: Cargo.toml  README.md  build.rs
vrlgraph-egui/: Cargo.toml  README.md  build.rs
vrlgraph-egui/examples/demo/: main.rs
vrlgraph-egui/examples/egui_texture/: main.rs
vrlgraph-egui/examples/egui_texture/shaders/: egui_triangle.vert.glsl
vrlgraph-egui/src/: lib.rs
vrlgraph/derive/src/: lib.rs  shader.rs
vrlgraph/examples/array_layers/: main.rs
vrlgraph/examples/array_layers/shaders/: compose.frag.glsl  fill.frag.glsl
vrlgraph/examples/compute/: main.rs
vrlgraph/examples/compute/shaders/: fullscreen.vert.glsl
vrlgraph/examples/multiview/: main.rs
vrlgraph/examples/multiview/shaders/: composite.frag.glsl  composite.vert.glsl  stereo.frag.glsl  stereo.vert.glsl
vrlgraph/src/: lib.rs  shader.rs  vertex.rs
vrlgraph/src/device/: mod.rs  queue.rs  surface.rs
vrlgraph/src/graph/: access.rs  barrier.rs  bindless.rs  command.rs  dag.rs  frame.rs  image.rs  mod.rs  pass.rs  pipeline.rs  pipelines.rs  reload.rs  resources.rs  transient.rs
vrlgraph/src/resource/: image.rs  pool.rs
vrlgraph/tests/: scalar_layout.rs
