[package]
name = "vrlgraph-egui"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "egui integration for vrlgraph"
repository = "https://github.com/raphvrl/vrlgraph"

[dependencies]
vrlgraph = { path = "../vrlgraph" }
egui = "0.34.1"
ash = "0.38.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
gpu-allocator = "0.28.0"
rustc-hash = "2.1.2"

[dev-dependencies]
winit = "0.30.13"
egui-winit = "0.34.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[[example]]
name = "demo"
path = "examples/demo/main.rs"
